# pycrobit

./: .flake8  .pre-commit-config.yaml  README.md  pycrobit.py  setup.cfg
.github/: FUNDING.yml
.github/workflows/: ci.yaml
tests/: conftest.py  pycrobit_colormap_test.py  pycrobit_string_test.py  pycrobit_test.py  test_pycrobit.py
