[metadata]
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
name = pycrobit
version = 0.1.0
description = Recycle microbits exercises in python using 5 * 5 strings and some coloring
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
url = https://github.com/MixTeen/pycrobit

[options]
tests_require =
    pytest-cov
    pytest-vcr
    python-coveralls
    coverage
    coveralls
    pylint==2.14.0b1

[options.extras_require]
colorama =
    colorama
